@@ -1,4 +1,4 @@
 DOS2UNIX_VERSION = 6.0.4-beta5
 DOS2UNIX_VERSION_SHORT = 604b5
-DOS2UNIX_DATE = 2013-11-03
+DOS2UNIX_DATE = 2013-11-26
 DOS2UNIX_AUTHOR = 'Erwin Waterlander'
