@@ -2,6 +2,8 @@
 
   * New options to convert UTF-16 files without BOM.
   * New Russian translation of the messages.
+  * Use MinGW-w64 instead of MinGW.org for 32 bit Windows binaries for proper
+    Large File Support (LFS) support.
 
 2013-01-25: Version 6.0.3
 
